--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><href="%D1%87%D0%B5%D1%81%D1%82%D0%B8%D1%82%D0%BA%D0%B0.pdf">Click hear for event info<a></p>
+  <p><href="%D1%87%D0%B5%D1%81%D1%82%D0%B8%D1%82%D0%BA%D0%B0.pdf">Click hear for event info</a></p>
 </html>
